--- a/index.html
+++ b/index.html
@@ -16,19 +16,27 @@
       h1, h2, h3 {
         font-family: 'Montserrat', sans-serif;
       }
+      /* Previne flashes brancos antes do React carregar */
+      #root:empty {
+        background-color: #ffffff;
+        min-height: 100vh;
+      }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
-  }
-}
-</script>
-</head>
+    <script type="importmap">
+    {
+      "imports": {
+        "react": "https://esm.sh/react@19.0.0",
+        "react/": "https://esm.sh/react@19.0.0/",
+        "react-dom": "https://esm.sh/react-dom@19.0.0",
+        "react-dom/": "https://esm.sh/react-dom@19.0.0/",
+        "lucide-react": "https://esm.sh/lucide-react@0.460.0"
+      }
+    }
+    </script>
+  </head>
   <body class="bg-neutral-50 text-neutral-900 overflow-x-hidden">
     <div id="root"></div>
+    <!-- Ponto de entrada crucial para a aplicação carregar -->
+    <script type="module" src="index.tsx"></script>
   </body>
 </html>
